<resources>

    <string name="app_name">TravelApp</string>

    <string name="ek_img_content">ExportKit Image</string>

    <string name="login_ek1_string">Login</string>

    <string name="email_string">Email</string>

    <string name="email_address_string">Email Address</string>

    <string name="password_string">Password</string>

    <string name="password_ek1_string">Password</string>
    <string name="txtSignIn"><u>Sign In</u></string>
    <string name="txtSignUp"><u>Sign Up</u></string>
    <string name="txtAddFav"><u>Add to Favorites</u></string>
    <string name="jerusalem_string">    Jerusalem is a city in Western Asia. Situated on a plateau in the Judaean Mountains between the Mediterranean and the Dead Sea, it is one of the oldest cities in the world and is considered to be a holy city for the three major Abrahamic religions: Judaism, Christianity, and Islam.</string>

    <string name="number_string">5142 - 8164 - 6526 - 2563</string>

    <string name="put_name_here_string">jenner anne</string>

    <string name="put_name_here_ek1_string">05/34</string>

    <string name="credit_text_string">Valid Till</string>

    <string name="credit_text_ek1_string">Name</string>

    <string name="home_string">Home</string>
    <string name="fav_string">Favorites</string>

    <string name="saved_cards_string">Saved Cards</string>

    <string name="add_new_string">Add New</string>

    <string name="proceed_string">Proceed</string>
    <string name="forgot_password__string">

<u>Forgot password?</u>

</string>

    <string name="remember_me_string">Remember me</string>

    <string name="login_ek2_string">Login</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_all">All</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_sorted">Sorted</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="Continent">Continent</string>
    <string name="Continents">Continents</string>
    <string name="log_out">Log out from the application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>